Bug 92699 - [BDW SKL BXT] IGT gem_bad_reloc@negative-reloc-blt is failing
Summary: [BDW SKL BXT] IGT gem_bad_reloc@negative-reloc-blt is failing
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-27 21:21 UTC by Elio
Modified: 2017-07-24 22:44 UTC (History)
1 user (show)

See Also:
i915 platform: BDW, BXT, SKL
i915 features:


Attachments
Dmesg Logs (246.63 KB, text/plain)
2015-10-27 21:21 UTC, Elio
no flags Details
full dmesg for skl (805.63 KB, text/plain)
2015-10-30 14:15 UTC, Olivier Berthier
no flags Details
BXT-P_results.json.bz2 (1.58 KB, text/plain)
2015-11-02 15:18 UTC, cprigent
no flags Details
BXT-P_kern.log (24.88 MB, text/plain)
2015-11-02 15:20 UTC, cprigent
no flags Details

Description Elio 2015-10-27 21:21:19 UTC
Created attachment 119233 [details]
Dmesg Logs

c is failing showing the following error:

Returncode	99
Time	0:00:00.042605
Stdout	
IGT-Version: 1.12-g1f9e055 (x86_64) (Linux: 4.3.0-rc6-mainline+ x86_64)
Stack trace:
  #0 [__igt_fail_assert+0xf1]
  #1 [negative_reloc_blt+0x37b]
  #2 [__real_main231+0xce]
  #3 [main+0x29]
  #4 [__libc_start_main+0xf5]
  #5 [_start+0x29]
  #6 [<unknown>+0x29]
Subtest negative-reloc-blt: FAIL (0.020s)
Stderr	
Test assertion failure function negative_reloc_blt, file gem_bad_reloc.c:224:
Failed assertion: buf[i] == 0xc0ffee ^ i
error: 0 != 12648430
Subtest negative-reloc-blt failed.
**** DEBUG ****
Test assertion failure function negative_reloc_blt, file gem_bad_reloc.c:224:
Failed assertion: buf[i] == 0xc0ffee ^ i
error: 0 != 12648430
****  END  ****

Steps to reproduce:

Install Graphics stack with test eviroment configuration. 
Execute: ./run-test.sh -t gem_bad_reloc@negative-reloc-blt

Expected result: test should pass

Actual result: test fails


Test Enviroment:


kernel: 4.3.0-rc6-drm-intel-nightly
xorg-server-1.17.2
libdrm-2.4.65
xf86-video-intel-2.99.917
mesa-11.0.4-devel 
libva-1.6.1
intel-driver-1.6.1
cairo-1.14.2


Platform:
Broadwell-U
Hardware
Platform: Lenovo G50
Processor: Intel Core I5-5200 2.20 GHz
Software
Linux distribution: Ubuntu 14.04.03 LTS 64 bits
BIOS:B0CN69WW


Attaching Dmesg Log
Comment 1 Olivier Berthier 2015-10-30 14:15:26 UTC
Created attachment 119300 [details]
full dmesg for skl

Bug reproduced on Sky Lake Y.

Setup:
------
Hardware
CPU : Intel(R) Core(TM) m5-6Y57 CPU @ 1.10GHz (family: 6, model: 78  stepping: 3)
MCP : SKL-Y  D1 2+2 (ou ULX-D1)
QDF : QJK9
CPU : SKL D0
Chipset PCH: Sunrise Point LP C1      
CRB : SKY LAKE Y LPDDR3 RVP3 CRB FAB2
Reworks : All Mandatories + FBS02,FBS03, F23, O-02 & O-06

Software
BIOS : SKLSE2R1.R00.X097.B02.1509020030
ME FW : 11.0.0.1173
Ksc (EC FW): 1.19
Linux distribution: Ubuntu 15.04 LTS 64 bits
kernel 4.3.0-rc5-drm-intel-testing-2015-10-23 87074657f22e38163e712ca417e1a398d00096b6
xorg-server-1.17.2
libdrm-2.4.65
xf86-video-intel-2.99.917
mesa-11.0.4-devel 
libva-1.6.1
intel-driver-1.6.1
cairo-1.14.2

Intel GPU Tools bfea74a9f64a900bcb90f946b38746781017449f
Comment 2 cprigent 2015-11-02 15:18:50 UTC
Created attachment 119349 [details]
BXT-P_results.json.bz2

Test is also fail on BXT-P:
Hardware 
Platform: Broxton P A0 Platform 
CPU Name : Intel(R) @ 1.2 GHz (family: 6, model: 92, stepping: 8) – 4 cores
SoC : BROXTON-P A0
CRB : Apollo Lake RVP Fab1
Software 
Linux distribution: Ubuntu 15.04 64 bits 
kernel 4.3.0-rc5 (26f82bd8) from https://github.com/ideak/linux.git BXT branch
commit 26f82bd872901733b739480e8899a92966ae9292
Author: Imre Deak <imre.deak@intel.com>
Date:   Tue Oct 20 16:44:03 2015 +0300
drm/i915/bxt: update bxt_defconfig
Enable Kconfig options needed for UART/eMMC.
Signed-off-by: Imre Deak <imre.deak@intel.com>
BIOS: APLKRVPA.X64.0104.R43.1510080446 
BIOS (IFWI Version): APLK_IFWI_X64_R_2015_41_5_02
CSE : 3.0.0.1044
KSC : 1.02
Comment 3 cprigent 2015-11-02 15:20:45 UTC
Created attachment 119350 [details]
BXT-P_kern.log
Comment 4 cprigent 2015-11-07 11:16:21 UTC
Reproduced on SKL-Y with last setup:

Platform: SKY LAKE Y A0 
CPU : Intel(R) Core(TM) m5-6Y57 CPU @ 1.10GHz (family: 6, model: 78  stepping: 3)
MCP : SKL-Y  D1 2+2 (ou ULX-D1)
QDF : QJK9 
CPU : SKL D0
Chipset PCH: Sunrise Point LP C1       
CRB : SKY LAKE Y LPDDR3 RVP3 CRB FAB2
Reworks : All Mandatories + FBS02,FBS03, F23, O-02 & O-06
Software
BIOS : SKLSE2R1.R00.X097.B02.1509020030
ME FW : 11.0.0.1173
Ksc (EC FW): 1.19
Linux distribution: Ubuntu 14.04 LTS 64 bits
kernel 4.3.0-rc7-drm-intel-nightly (86ba603) from git://anongit.freedesktop.org/drm-intel
  commit 86ba603f327626055fe1436112b3786eaaaf7fb1
  Author: Daniel Vetter <daniel.vetter@ffwll.ch>
  Date:   Sat Oct 31 09:27:21 2015 +0100
  drm-intel-nightly: 2015y-10m-31d-08h-26m-39s UTC integration manifest
Mesa 11.0.4 from http://cgit.freedesktop.org/mesa/mesa/
xf86-video-intel - 2.99.917 from http://cgit.freedesktop.org/xorg/driver/xf86-video-intel/
Libdrm - 2.4.65 from http://cgit.freedesktop.org/mesa/drm/
Libva - 1.6.1 from http://cgit.freedesktop.org/libva/
vaapi intel-driver - 1.6.1 from http://cgit.freedesktop.org/vaapi/intel-driver
Cairo - 1.14.2 from http://cgit.freedesktop.org/cairo
Xorg Xserver - 1.17.2 from http://cgit.freedesktop.org/xorg/xserver
Comment 5 cprigent 2015-11-15 15:09:33 UTC
Reproduced on SKL-Y with last setup:
Platform: SKY LAKE Y A0 
CPU : Intel(R) Core(TM) m5-6Y57 CPU @ 1.10GHz (family: 6, model: 78  stepping: 3)
MCP : SKL-Y  D1 2+2
QDF : QJK9 
CPU : SKL D0
Chipset PCH: Sunrise Point LP C1       
CRB : SKY LAKE Y LPDDR3 RVP3 CRB FAB2
Reworks : All Mandatories + FBS02,FBS03, F23, O-02 & O-06
BIOS : SKLSE2R1.R00.X097.B02.1509020030
ME FW : 11.0.0.1173
Ksc (EC FW): 1.19
Linux distribution: Ubuntu 15.04 LTS 64 bits
kernel 4.3.0-drm-intel-nightly (a3b0dec) from git://anongit.freedesktop.org/drm-intel
  commit a3b0dec82fdb59c629c4fb9847245b80b0cf69dd
  Author: Jani Nikula jani.nikula@intel.com
  Date: Fri Nov 6 14:48:23 2015 +0200
  drm-intel-nightly: 2015y-11m-06d-12h-48m-02s UTC integration manifest
Mesa 11.0.4 from http://cgit.freedesktop.org/mesa/mesa/
xf86-video-intel - 2.99.917 from http://cgit.freedesktop.org/xorg/driver/xf86-video-intel/
Libdrm - 2.4.65 from http://cgit.freedesktop.org/mesa/drm/
Libva - 1.6.1 from http://cgit.freedesktop.org/libva/
vaapi intel-driver - 1.6.1 from http://cgit.freedesktop.org/vaapi/intel-driver
Cairo - 1.14.2 from http://cgit.freedesktop.org/cairo
Xorg Xserver - 1.17.2 from http://cgit.freedesktop.org/xorg/xserver
Comment 6 cprigent 2015-11-27 17:03:28 UTC
Test is fail on SKL-Y with kernel tag drm-intel-testing-2015-11-20 

Motherboard: Skylake Y
cpu model name	: Intel(R) Core(TM) m5-6Y57 CPU @ 1.10GHz
cpu model : 78
cpu family : 6
Graphic card: Device 191e (rev 07) 
Software:
Kernel: tag drm-intel-testing-2015-11-20 5074e51ef3a2b0ad4c2354e95aec5380a93966b3 (4.4-rc1) from git://anongit.freedesktop.org/drm-intel
Ubuntu 14.04.2 LTS
Bios: SKLSE2R1.R00.B104.B01.1511110114
Libdrm: 2.4.65 from http://cgit.freedesktop.org/mesa/drm
Comment 7 cprigent 2015-12-01 09:54:13 UTC
Still fail on BXT-P/APL with last setup:

Hardware 
Platform: Broxton P A0 Platform 
CPU Name : Intel(R) @ 1.2 GHz (family: 6, model: 92, stepping: 8) – 4 cores
SoC : BROXTON-P A0
CRB : Apollo Lake RVP Fab1 
Software
BIOS: APLKRVPA.X64.0104.R43.1510080446 
BIOS (IFWI Version): APLK_IFWI_X64_R_2015_41_5_02
CSE : 3.0.0.1044
KSC : 1.02
Linux distribution: Ubuntu 15.04 64 bits 
Kernel: drm-intel-nightly 5074e51 (4.4-rc1) from git://anongit.freedesktop.org/drm-intel 
  commit 5074e51ef3a2b0ad4c2354e95aec5380a93966b3
  Author: Imre Deak imre.deak@intel.com
  Date: Fri Nov 20 11:50:03 2015 +0200
  drm-intel-nightly: 2015y-11m-20d-09h-49m-41s UTC integration manifest
Libdrm - 2.4.65 from http://cgit.freedesktop.org/mesa/drm/
Comment 8 cprigent 2015-12-11 14:45:43 UTC
Also fail on BXT-P/APL with Q4 stack release:
Platform: Broxton P A0 Platform
CPU Name : Intel(R) @ 1.2 GHz (family: 6, model: 92, stepping: 8) – 4 cores
SoC : BROXTON-P A0
QDF : QYE2
CRB : Apollo Lake RVPC1 Fab1
Mandatory Reworks : R14 
Software
BIOS (IFWI Version): APLK_IFWI_X64_R_2015_44_3_00
Kernel: tag testing 2015-11-20 from http://cgit.freedesktop.org/drm-intel/tag/?h=drm-intel-testing&id=drm-intel-testing-2015-11-20
xorg-server-1.18.0 from http://cgit.freedesktop.org/xorg/xserver
libdrm-2.4.65 from http://cgit.freedesktop.org/mesa/drm/
xf86-video-intel 2.99.917 from http://cgit.freedesktop.org/xorg/driver/xf86-video-intel/
mesa-11.0.4 from http://cgit.freedesktop.org/mesa/mesa/
libva-1.6.1 from http://cgit.freedesktop.org/libva/
vaapi-intel-driver 1.6.1 from http://cgit.freedesktop.org/vaapi/intel-driver
cairo 1.14.4 from http://cgit.freedesktop.org/cairo
DMC 1.06 firmware from https://01.org/linuxgraphics/intel-linux-graphics-firmwares
IGT 1.13 http://cgit.freedesktop.org/xorg/app/intel-gpu-tools/tag/?id=intel-gpu-tools-1.13
Comment 9 Chris Wilson 2016-01-28 10:17:31 UTC
Fixed as a side-effect of

commit 934acce3c069a3d8b14085957248444145d9ec1b
Author: Michał Winiarski <michal.winiarski@intel.com>
Date:   Tue Dec 29 18:24:52 2015 +0100

    drm/i915: Avoid writing relocs with addresses in non-canonical form


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.